# task-tracker-backend

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: quality.yml  run-tests.yml  tests.yml
app/: main.py  persistence.py  schemas.py  store.py
app/api/v1/: list.py  task.py
app/core/: config.py  errors.py  logging.py
app/db/: context.py  list_repository.py  repository.py  storage.py  task_repository.py
app/models/: list.py  storage.py  task.py
app/routes/: tasks.py
app/save_data/: save_data.json
app/schemas/: app.py  storage.py  task.py
tests/: conftest.py  helpers.py  test_app_isolation.py  test_echo.py  test_health.py  test_lists_in_memory.py  test_lists_persistence.py  test_repository_failures.py  test_storage_and_errors.py  test_tasks.py  test_tasks_in_memory.py  test_tasks_persistence.py
